# podcast_bot_telegram

./: .gitignore  Dockerfile  README.md  docker-compose.yml  exceptions.py  handlers_declaration.py  main.py  pyproject.toml
podcast_translation_bot/: exceptions.py  handlers_declaration.py  main.py
podcast_translation_bot/functions/: __init__.py  download_video.py  mp3_to_text_convert.py
podcast_translation_bot/handlers/: __init__.py  conversation_handler.py  requests_handlers.py  start.py
podcast_translation_bot/utils/: __init__.py  download_video.py  mp3_to_text_convert.py
